manifests/part2/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: helloworld.a.b.c.com
    http:
      paths:
      - path: /
        backend:
         serviceName: grafana
         servicePort: 3000
