manifests/part2/allow-kube-system.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-kube-system
  namespace: private
spec:
  podSelector:
    matchLabels:
      app: private-service
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: kube-system
