manifests/part2/private-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: private-deny-all
  namespace: private
spec:
  podSelector: {}
  ingress: []
